syntax = "proto3";

package bytebase.store;

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/rpc/status.proto";

option go_package = "generated-go/store";

message AuditLog {
  // The project or workspace the audit log belongs to.
  // Formats:
  // - projects/{project}
  // - workspaces/{workspace}
  string parent = 1;

  // Example: /bytebase.v1.SQLService/Query
  string method = 2;

  // The resource name.
  // Example: projects/{project}
  string resource = 3;

  // Format: users/{userUID}.
  string user = 4;

  Severity severity = 5;

  // Marshalled request.
  string request = 6;

  // Marshalled response.
  // Some fields are omitted because they are too large or contain sensitive information.
  string response = 7;

  google.rpc.Status status = 8;

  // The latency of the RPC.
  google.protobuf.Duration latency = 9;

  // The service-specific data about the request, response, and other activities.
  google.protobuf.Any service_data = 10;

  // Metadata about the operation.
  RequestMetadata request_metadata = 11;

  // Server identifier for this Bytebase server
  // Format: {source}-{timestamp}-{random}
  // Used by log aggregators for deduplication and gap detection
  string server_id = 12;

  // Monotonically increasing sequence number within this server
  // Guaranteed gap-free for stdout integrity: 1, 2, 3, 4, ...
  // NULL for logs created before this feature was deployed
  int64 sequence_number = 13;

  enum Severity {
    SEVERITY_UNSPECIFIED = 0;
    DEBUG = 1;
    INFO = 2;
    NOTICE = 3;
    WARNING = 4;
    ERROR = 5;
    CRITICAL = 6;
    ALERT = 7;
    EMERGENCY = 8;
  }
}

// Metadata about the request.
message RequestMetadata {
  // The IP address of the caller.
  string caller_ip = 1;

  // The user agent of the caller.
  // This information is not authenticated and should be treated accordingly.
  string caller_supplied_user_agent = 2;
}
